Fix opening animate on safari and create scene after opening animate

--- a/src/styles/components/content.scss
+++ b/src/styles/components/content.scss
@@ -46,5 +46,6 @@
     z-index: 0;
     width: 100%;
     height: 100%;
+    opacity: 0;
   }
 }
